css bugfix for production, was preventing game menus from being visible

--- a/client/components/gameOverModal/gameOverModal.scss
+++ b/client/components/gameOverModal/gameOverModal.scss
@@ -1,7 +1,8 @@
 game-over-modal{
   position: absolute;
-  top: 30%;
   width: 100%;
+  top: 30%;
+  left: 0px;
   text-align: center;
   h1{
     font-size: 100px;
